[tool.poetry]
package-mode = false

[project]
name = "liminal-krk"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "blinker (==1.9.0)",
    "cfgv (==3.4.0)",
    "click (==8.1.8)",
    "colorama (==0.4.6)",
    "cssbeautifier (==1.15.4)",
    "distlib (==0.4.0)",
    "djlint (==1.36.4)",
    "editorconfig (==0.17.1)",
    "filelock (==3.19.1)",
    "flask (==3.1.2)",
    "identify (==2.6.15)",
    "importlib-metadata (==8.7.0)",
    "itsdangerous (==2.2.0)",
    "jinja2 (==3.1.6)",
    "jsbeautifier (==1.15.4)",
    "json5 (==0.12.1)",
    "markupsafe (==3.0.3)",
    "nodeenv (==1.9.1)",
    "pathspec (==0.12.1)",
    "platformdirs (==4.4.0)",
    "pyyaml (==6.0.3)",
    "regex (==2025.11.3)",
    "six (==1.17.0)",
    "tomli (==2.3.0)",
    "tqdm (==4.67.1)",
    "typing-extensions (==4.15.0)",
    "virtualenv (==20.35.4)",
    "werkzeug (==3.1.4)",
    "zipp (==3.23.0)",
    "waitress (>=3.0.2,<4.0.0)"
]

[project.scripts]
dev = "flaskr:create_app"
prod = "flask --app app run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
